--- a/2D/nv/character generator/style.scss
+++ b/2D/nv/character generator/style.scss
@@ -46,6 +46,27 @@ body{
     #presets{
         position: absolute;
         top:10px;
+        display: flex;
+        overflow-x: hidden;
+        overflow-y: auto;
+        padding-top:25px;
+        height:calc(100% - 35px);
+        width:90%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        justify-content: center;
+        align-items: flex-start;
+        h2{
+            position: absolute;
+            top:0;
+            width:100%;
+            display: inline-block;
+            left:0;
+            margin:0;
+            text-align:center;
+            
+        }
     }
     
     &.presets>#swatches,
@@ -55,5 +76,16 @@ body{
         pointer-events: none;
         z-index: -1;
         
+    }
+}
+
+#export_buttons{
+    width:50px;
+    position: absolute;
+    left:500px;
+    top:20px;
+    button{
+        width:100%;
+        text-align: center;
     }
 }
